# smart-glasses

./: .gitignore  Makefile  QUICK_COMMAND.md  README.md  requirements.txt  run_server.sh
client/mobile/: app.js  index.html  style.css
client/oled/: oled.ino
oled/: oled.ino
server/: CMakeLists.txt  serve.cpp  serve.py
server/web_server/: CMakeLists.txt  main.cpp  serve.py
